syntax = "proto3";

package products;

enum ProductFilterPageTokenKind {
  PRODUCT_FILTER_PAGE_TOKEN_KIND_UNSPECIFIED = 0;
  PRODUCT_FILTER_PAGE_TOKEN_KIND_ID = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  double price = 3;
}

message ProductFilter {
  repeated int64 ids = 1;
  double min_price = 2;
  double max_price = 3;
  string name_substring = 4;
  int32 page_size = 5;
  string page_token = 6;
}

message PagedResultProduct {
  repeated Product items = 1;
  string next_page_token = 2;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message CreateProductResponse {
  int64 product_id = 1;
}

message QueryProductsRequest {
  ProductFilter filter = 1;
}

message QueryProductsResponse {
  PagedResultProduct result = 1;
}

service ProductsService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc QueryProducts(QueryProductsRequest) returns (QueryProductsResponse);
}
